Added region header
Signed-off-by: Sebastian Hoß <mail@shoss.de>

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
   <description>Collection of common units.</description>
 
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+  <!--                                 MODULES                                 -->
+  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+  <modules>
+    <module>storage-units</module>
+    <module>weight-units</module>
+  </modules>
+
+  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
   <!--                                  SOURCE                                 -->
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
   <scm>
@@ -67,9 +75,4 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
-  <modules>
-    <module>storage-units</module>
-    <module>weight-units</module>
-  </modules>
 </project>
