--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,15 @@
     <dependencies>
       <dependency>
         <groupId>com.github.sebhoss</groupId>
-        <artifactId>java-bom</artifactId>
-        <version>1.0.2</version>
+        <artifactId>sebhoss-bom</artifactId>
+        <version>2.0.1</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.github.sebhoss</groupId>
+        <artifactId>testing-bom</artifactId>
+        <version>2.0.1</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -66,7 +73,6 @@
     <dependency>
       <groupId>com.github.sebhoss</groupId>
       <artifactId>common-annotations</artifactId>
-      <version>1.1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
