Use latest BOMs
Signed-off-by: Sebastian Hoß <mail@shoss.de>

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
   </scm>
 
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+  <!--                                PROPERTIES                               -->
+  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+  <properties>
+    <version.bom>2.0.6-SNAPSHOT</version.bom>
+  </properties>
+
+  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
   <!--                               DEPENDENCIES                              -->
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
   <dependencyManagement>
@@ -56,14 +63,14 @@
       <dependency>
         <groupId>com.github.sebhoss</groupId>
         <artifactId>sebhoss-bom</artifactId>
-        <version>2.0.1</version>
+        <version>${version.bom}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>com.github.sebhoss</groupId>
         <artifactId>testing-bom</artifactId>
-        <version>2.0.1</version>
+        <version>${version.bom}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
