--- a/storage-units/pom.xml
+++ b/storage-units/pom.xml
@@ -19,4 +19,13 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>storage-units</artifactId>
+  
+  <dependencies>
+    <dependency>
+      <groupId>nl.jqno.equalsverifier</groupId>
+      <artifactId>equalsverifier</artifactId>
+      <version>1.3.1</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
