--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
   <!--                                PROPERTIES                               -->
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
   <properties>
-    <version.bom>2.0.6-SNAPSHOT</version.bom>
+    <version.bom>2.0.6</version.bom>
   </properties>
 
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
