--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <!--                               INFORMATIONS                              -->
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
   <artifactId>storage-units</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
   <inceptionYear>2012</inceptionYear>
   <url>https://github.com/sebhoss/storage-units</url>
   <name>Storage Units</name>
