--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
   <parent>
     <groupId>com.github.sebhoss</groupId>
     <artifactId>java-parent</artifactId>
-    <version>2.0.1</version>
+    <version>2.0.2-SNAPSHOT</version>
   </parent>
 
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
@@ -65,7 +65,8 @@
   <properties>
     <version.bom>2015.11.04</version.bom>
 
-    <coverage>0.25</coverage>
+    <jacoco.lineCoverage>0.25</jacoco.lineCoverage>
+    <pit.mutationCoverage>25</pit.mutationCoverage>
   </properties>
 
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
@@ -96,11 +97,6 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>nl.jqno.equalsverifier</groupId>
-      <artifactId>equalsverifier</artifactId>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
 
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
@@ -109,16 +105,15 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
+        <groupId>org.pitest</groupId>
+        <artifactId>pitest-maven</artifactId>
         <configuration>
-          <!--
-            Ignore common annotations because @SuppressWarnings is not retained
-            in byte code. Therefore the plugin detects a false positive.
-           -->
-          <usedDependencies>
-            <usedDependency>com.github.sebhoss:suppress-warnings</usedDependency>
-          </usedDependencies>
+          <targetClasses>
+            <param>com.github.sebhoss.units.storage*</param>
+          </targetClasses>
+          <targetTests>
+            <param>com.github.sebhoss.units.storage*</param>
+          </targetTests>
         </configuration>
       </plugin>
     </plugins>
