--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
+# see http://docs.travis-ci.com/user/languages/java/
 language: java
 jdk:
   - oraclejdk8
+
+# see http://docs.travis-ci.com/user/workers/container-based-infrastructure/
+sudo: false
+
+# see http://docs.travis-ci.com/user/caching/#Arbitrary-directories
+cache:
+  directories:
+  - $HOME/.m2
 
 after_success:
 - mvn clean test jacoco:report coveralls:report
