--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
   <parent>
     <groupId>com.github.sebhoss</groupId>
     <artifactId>java-parent</artifactId>
-    <version>2.0.2</version>
+    <version>2.0.3-SNAPSHOT</version>
   </parent>
 
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
@@ -92,23 +92,4 @@
     </dependency>
   </dependencies>
 
-  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-  <!--                                   BUILD                                 -->
-  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.pitest</groupId>
-        <artifactId>pitest-maven</artifactId>
-        <configuration>
-          <targetClasses>
-            <param>com.github.sebhoss*</param>
-          </targetClasses>
-          <targetTests>
-            <param>com.github.sebhoss*</param>
-          </targetTests>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 </project>
