--- a/pom.xml
+++ b/pom.xml
@@ -34,18 +34,19 @@
   <!--                                 PARENT                                  -->
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
   <parent>
-    <groupId>com.github.sebhoss</groupId>
-    <artifactId>java-parent</artifactId>
-    <version>2.0.3-SNAPSHOT</version>
+    <groupId>com.github.sebhoss.maven.parents</groupId>
+    <artifactId>maven-parents-java-prototype</artifactId>
+    <version>0.0.0-SNAPSHOT</version>
   </parent>
 
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
   <!--                               INFORMATIONS                              -->
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+  <groupId>de.xn__ho_hia.utils.storage_units</groupId>
   <artifactId>storage-units</artifactId>
-  <version>2.0.1-SNAPSHOT</version>
+  <version>1.0.0-SNAPSHOT</version>
   <inceptionYear>2012</inceptionYear>
-  <url>https://github.com/sebhoss/storage-units</url>
+  <url>https://seb.hoß.de/storage-units</url>
   <name>Storage Units</name>
   <description>Implementation of storage units according to ISO IEC 80000-13:2008.</description>
 
