--- a/.travis.yml
+++ b/.travis.yml
@@ -30,11 +30,6 @@ addons:
     build_command:   "mvn -DskipTests=true compile"
     branch_pattern: master
 
-# see http://docs.travis-ci.com/user/notifications/
+# see https://docs.travis-ci.com/user/notifications/#IRC-notification
 notifications:
-  webhooks:
-    urls:
-      - https://webhooks.gitter.im/e/edbcebdb6f3847f7cc19
-    on_success: always  # options: [always|never|change] default: always
-    on_failure: always  # options: [always|never|change] default: always
-    on_start: never     # options: [always|never|change] default: always
+  irc: "chat.freenode.net#metio.wtf"
