--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
     <dependency>
       <groupId>de.xn--ho-hia.quality</groupId>
       <artifactId>null-analysis</artifactId>
+      <version>3.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
