--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,14 @@
   <parent>
     <groupId>de.xn--ho-hia.maven.parents</groupId>
     <artifactId>maven-parents-java-stable</artifactId>
-    <version>9999.99.99-SNAPSHOT</version>
+    <version>2016.07.02-120434</version>
   </parent>
 
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
   <!--                               COORDINATES                               -->
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
   <!-- https://maven.apache.org/pom.html#Maven_Coordinates -->
-  <groupId>de.xn__ho_hia.utils.storage_units</groupId>
+  <groupId>de.xn--ho-hia.utils.storage_units</groupId>
   <artifactId>storage-units</artifactId>
   <version>2.0.0-SNAPSHOT</version>
 
@@ -91,7 +91,6 @@
     <dependency>
       <groupId>de.xn--ho-hia.quality</groupId>
       <artifactId>null-analysis</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
