--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,8 @@
   <!-- https://maven.apache.org/pom.html#Maven_Coordinates -->
   <groupId>de.xn--ho-hia.utils.storage_units</groupId>
   <artifactId>storage-units</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0-${revision}</version>
+  <packaging>jar</packaging>
 
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
   <!--                               INFORMATIONS                              -->
@@ -77,6 +78,14 @@
       <url>https://seb.xn--ho-hia.de/storage-units</url>
     </site>
   </distributionManagement>
+
+  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+  <!--                                PROPERTIES                               -->
+  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+  <!-- https://maven.apache.org/pom.html#Properties -->
+  <properties>
+    <revision>SNAPSHOT</revision>
+  </properties>
 
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
   <!--                               DEPENDENCIES                              -->
