update travis config to latest & greatest
Signed-off-by: Sebastian Hoß <mail@shoss.de>

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,25 +11,32 @@ cache:
   directories:
   - $HOME/.m2
 
+# see https://github.com/trautonen/coveralls-maven-plugin#jacoco
 after_success:
 - mvn clean test jacoco:report coveralls:report
 
-
 env:
   global:
-   # COVERITY_SCAN_TOKEN
-   - secure: "Bm3zHFYJZlWPpUJXYbx8VxGEhMQeu/PUlNFbc10t1C7OEazjgtN9pYyWAxmYM2rAtvhiGF+yy9H+UdfaWd7NrHDoBXWbJjxagKhEsXxi931GtwxfxyxAmhmOuLQXaS9xofKIi7wYCyt8ekPaW8gsXWBWVmN0A1bpqdF93QwV2uU="
+    # exposes 'COVERITY_SCAN_TOKEN'
+    # see https://scan.coverity.com/travis_ci
+    - secure: "Bm3zHFYJZlWPpUJXYbx8VxGEhMQeu/PUlNFbc10t1C7OEazjgtN9pYyWAxmYM2rAtvhiGF+yy9H+UdfaWd7NrHDoBXWbJjxagKhEsXxi931GtwxfxyxAmhmOuLQXaS9xofKIi7wYCyt8ekPaW8gsXWBWVmN0A1bpqdF93QwV2uU="
 
 addons:
+  # see https://scan.coverity.com/travis_ci
+  # see https://docs.travis-ci.com/user/coverity-scan/
   coverity_scan:
     project:
       name: "sebhoss/storage-units"
       description: "Build submitted via Travis CI"
     notification_email: mail@shoss.de
     build_command_prepend: "mvn clean"
-    build_command:   "mvn -DskipTests=true compile"
+    build_command:  "mvn -DskipTests=true compile"
     branch_pattern: master
 
-# see https://docs.travis-ci.com/user/notifications/#IRC-notification
+# see https://docs.travis-ci.com/user/notifications/
 notifications:
+  # see https://docs.travis-ci.com/user/notifications/#IRC-notification
   irc: "chat.freenode.net#metio.wtf"
+  # see https://docs.travis-ci.com/user/notifications/#Email-notifications
+  email:
+    - "metio@googlegroups.com"
