add more serialization support for various libraries

--- a/storage-units-jackson/pom.xml
+++ b/storage-units-jackson/pom.xml
@@ -30,7 +30,7 @@
   <!--                               INFORMATIONS                              -->
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
   <!-- https://maven.apache.org/pom.html#More_Project_Information -->
-  <name>Storage Units :: Serialization :: Jackson</name>
+  <name>Storage Units :: Jackson</name>
 
   <dependencies>
     <dependency>
