--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
     <!-- https://maven.apache.org/pom.html#Inheritance -->
     <parent>
         <groupId>wtf.metio.maven.parents</groupId>
-        <artifactId>maven-parents-java-stable</artifactId>
-        <version>2022.9.30</version>
+        <artifactId>maven-parents-java-prototype</artifactId>
+        <version>2022.10.28</version>
     </parent>
 
     <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
@@ -94,7 +94,7 @@
                         <configuration>
                             <quiet>true</quiet>
                             <files>
-                                <file>java.properties</file>
+                                <file>${project.basedir}/../java.properties</file>
                             </files>
                         </configuration>
                     </execution>
