automate release & update workflows some more

--- a/.github/workflows/update-parent.yml
+++ b/.github/workflows/update-parent.yml
@@ -25,10 +25,11 @@ jobs:
             ${{ runner.os }}-maven-
       - name: Update Parent
         run: mvn --batch-mode versions:update-parent --define generateBackupPoms=false
-      - name: Create Pull Request
+      - id: cpr
+        name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT }}
           commit-message: Update parent to latest version
           committer: GitHub <noreply@github.com>
           author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
@@ -38,4 +39,13 @@ jobs:
           assignees: |
             sebhoss
           draft: false
+          base: main
           branch: update-parent
+          delete-branch: true
+      - name: Enable Pull Request Automerge
+        if: steps.cpr.outputs.pull-request-operation == 'created'
+        uses: peter-evans/enable-pull-request-automerge@v2
+        with:
+          token: ${{ secrets.PAT }}
+          pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
+          merge-method: rebase
