--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,52 +7,108 @@ on:
     - cron: 27 4 * * TUE
   workflow_dispatch:
 jobs:
-  build:
+  publish:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Java
+      - id: checkout
+        name: Clone Git Repository
+        uses: actions/checkout@v3
+      - id: commits
+        name: Count Commits
+        run: echo "count=$(git rev-list --count HEAD --since='last Tuesday')" >> $GITHUB_OUTPUT
+      - id: release
+        name: Create Release Version
+        if: steps.commits.outputs.count > 0
+        run: echo "version=$(date +'%Y.%-m.%-d')" >> $GITHUB_OUTPUT
+      - id: sha
+        name: Last Commit
+        if: steps.commits.outputs.count > 0
+        run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+      - id: timestamp
+        name: Build Timestamp
+        if: steps.commits.outputs.count > 0
+        run: echo "iso8601=$(date --utc --iso-8601=seconds)" >> $GITHUB_OUTPUT
+      - id: setup-java
+        name: Set up Java
+        if: steps.commits.outputs.count > 0
         uses: actions/setup-java@v3
         with:
           java-version: 17
+          java-package: jdk
+          architecture: x64
           distribution: temurin
           server-id: ossrh
           server-username: MAVEN_CENTRAL_USERNAME
           server-password: MAVEN_CENTRAL_TOKEN
-      - uses: actions/cache@v3
+      - id: cache
+        name: Cache Dependencies
+        if: steps.commits.outputs.count > 0
+        uses: actions/cache@v3
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-      - name: Create release version
-        id: release
-        run: echo "::set-output name=version::$(date +'%Y.%-m.%-d')"
-      - name: Count commits in last week
-        id: commits
-        run: echo "::set-output name=count::$(git rev-list --count HEAD --since='last Tuesday')"
-      - name: Set release version
-        run: mvn --batch-mode versions:set -DnewVersion=${{ steps.release.outputs.version }} -DgenerateBackupPoms=false
       - id: gpg
-        if: steps.commits.outputs.count > 0
         name: GPG Key
-        run: echo "${{ secrets.GPG_SECRET_KEY_BASE64 }}" | base64 --decode > $GITHUB_WORKSPACE/signing.key.asc
-      - name: Publish to Maven Central
         if: steps.commits.outputs.count > 0
-        run: mvn --batch-mode --activate-profiles release deploy -Dpgp.secretkey=keyfile:$GITHUB_WORKSPACE/signing.key.asc -Dpgp.passphrase=literal:${{ secrets.GPG_SECRET_KEY_PASSWORD }}
+        uses: timheuer/base64-to-file@v1.2
+        with:
+          fileName: signing.key.asc
+          fileDir: ${{ github.workspace}}
+          encodedString: ${{ secrets.GPG_SECRET_KEY_BASE64 }}
+      - id: pom-version
+        name: Set Release Version
+        if: steps.commits.outputs.count > 0
+        run: mvn --batch-mode --define newVersion=${{ steps.release.outputs.version }} --define generateBackupPoms=false versions:set
+      - id: deploy-maven
+        name: Deploy Maven Artifact
+        if: steps.commits.outputs.count > 0
+        run: |
+          mvn \
+            --batch-mode \
+            --activate-profiles release \
+            --define scmTag=${{ steps.sha.outputs.sha }} \
+            --define pgp.secretkey=keyfile:${{ steps.gpg.outputs.filePath }} \
+            --define pgp.passphrase=literal:${{ secrets.GPG_SECRET_KEY_PASSWORD }} \
+            --define project.build.outputTimestamp=${{ steps.timestamp.outputs.iso8601 }} \
+            deploy
         env:
           MAVEN_CENTRAL_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
           MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
-      - name: Create Release
+          MAVEN_OPTS: "--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED"
+      - id: create_release
+        name: Create Release
         if: steps.commits.outputs.count > 0
-        id: create_release
-        uses: actions/create-release@v1.1.4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ steps.release.outputs.version }}
-          release_name: ${{ steps.release.outputs.version }}
+          name: ${{ steps.release.outputs.version }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           draft: false
           prerelease: false
-          body: |
-            Automated release, see [commits](https://github.com/metio/storage-units/commits/${{ steps.release.outputs.version }}) for changes.
+          generate_release_notes: true
+      - id: mail
+        name: Send Mail
+        if: steps.commits.outputs.count > 0
+        uses: dawidd6/action-send-mail@v3.7.1
+        with:
+          server_address: ${{ secrets.MAIL_SERVER }}
+          server_port: ${{ secrets.MAIL_PORT }}
+          username: ${{ secrets.MAIL_USERNAME }}
+          password: ${{ secrets.MAIL_PASSWORD }}
+          subject: ${{ github.event.repository.name }} version ${{ steps.release.outputs.version }} published
+          body: See ${{ steps.create_release.outputs.url }} for details.
+          to: announcements@metio.groups.io
+          from: ${{ secrets.MAIL_SENDER }}
+      - id: matrix
+        name: Send Matrix Message
+        if: steps.commits.outputs.count > 0
+        uses: s3krit/matrix-message-action@v0.0.3
+        with:
+          room_id: ${{ secrets.MATRIX_ROOM_ID }}
+          access_token: ${{ secrets.MATRIX_ACCESS_TOKEN }}
+          message: ${{ github.event.repository.name }} version [${{ steps.release.outputs.version }}](${{ steps.create_release.outputs.url }}) published
+          server: matrix.org
