--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -3,12 +3,8 @@
 
 name: CodeQL
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
   schedule:
-    - cron: 42 3 * * 5
+    - cron: 42 3 * * TUE
 jobs:
   analyze:
     name: Analyze
