--- a/storage-units-model/pom.xml
+++ b/storage-units-model/pom.xml
@@ -44,8 +44,9 @@
             <artifactId>jspecify</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.spotbugs</groupId>
-            <artifactId>spotbugs-annotations</artifactId>
+            <groupId>com.google.errorprone</groupId>
+            <artifactId>error_prone_annotations</artifactId>
+            <version>2.23.0</version>
         </dependency>
     </dependencies>
 
