update github actions
Signed-off-by: Sebastian Hoß <seb@xn--ho-hia.de>

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -18,8 +18,9 @@ jobs:
       matrix:
         language: [ java ]
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+    - id: checkout
+      name: Checkout
+      uses: actions/checkout@v4
     - name: Set up Java
       uses: actions/setup-java@v3
       with:
