--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -18,8 +18,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - id: checkout
-        name: Clone Git Repository
-        uses: actions/checkout@v3
+        name: Checkout
+        uses: actions/checkout@v4
       - id: java
         name: Setup Java
         uses: actions/setup-java@v3
