--- a/.github/workflows/update-parent.yml
+++ b/.github/workflows/update-parent.yml
@@ -22,7 +22,7 @@ jobs:
         run: mvn --batch-mode --define generateBackupPoms=false versions:update-parent
       - id: cpr
         name: Create Pull Request
-        uses: peter-evans/create-pull-request@v4
+        uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.PAT }}
           commit-message: Update parent to latest version
@@ -31,16 +31,14 @@ jobs:
           title: Update parent to latest version
           body: |
             `mvn --batch-mode --define generateBackupPoms=false versions:update-parent`
-          assignees: |
-            sebhoss
+          assignees: sebhoss
           draft: false
           base: main
           branch: update-parent
           delete-branch: true
-      - name: Enable Pull Request Automerge
+      - id: automerge
+        name: Enable Pull Request Automerge
         if: steps.cpr.outputs.pull-request-operation == 'created'
-        uses: peter-evans/enable-pull-request-automerge@v2
-        with:
-          token: ${{ secrets.PAT }}
-          pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
-          merge-method: rebase
+        run: gh pr merge --rebase --auto "${{ steps.cpr.outputs.pull-request-number }}"
+        env:
+          GH_TOKEN: ${{ secrets.PAT }}
